--- a/www/assets/scss/_app.scss
+++ b/www/assets/scss/_app.scss
@@ -421,6 +421,25 @@ body.header__menu-active {
   opacity: 1;
 }
 
+.tv .media-screen {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  margin: auto;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+.tv .media-screen.active {
+  opacity: 1;
+}
+
+
+
 .flickity-page-dots {
   display: none;
 }
