--- a/www/assets/scss/_card-client.scss
+++ b/www/assets/scss/_card-client.scss
@@ -122,6 +122,15 @@
       /*width: 834px;*/
       height: 380px;
     }
+    &:after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: rgba(#000, 0.8);
+    }
     img {
       filter: grayscale(100%);
     }
@@ -148,8 +157,13 @@
         /*width: 834px;*/
         height: 480px;
       }
-      img {
-        filter: grayscale(0%);
+      &:hover {
+        img {
+          filter: grayscale(0%);
+        }
+      }
+      &:after {
+        background: rgba(#000, 0);
       }
     }
     
@@ -157,6 +171,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      filter: grayscale(100%);
     }
   }
   .card__col {
