--- a/www/assets/scss/_gallery.scss
+++ b/www/assets/scss/_gallery.scss
@@ -91,11 +91,17 @@
   top: 50%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
+  @media screen and (max-width: 991px) {
+    padding: 25px;
+  }
   .modal-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: relative;
+    @media screen and (max-width: 991px) {
+      flex-direction: column;
+    }
       p {
         margin: 0;
         position: relative;
@@ -147,26 +153,42 @@
   .library {
     position: relative;
     display: flex;
+    flex-direction: column;
+    @media (min-width: 992px){
+      flex-direction: row;
+    }
     .col-8 {
-      width: 75%;
+      width: 100%;
+      @media (min-width: 992px){
+        width: 75%;
+      }
       .library-box {
         width: 100%;
         height: 100%;
         #video-id {
           width: 100%;
-          height: 100%;
+          height: 220px;
+          @media (min-width: 600px){
+            height: 420px;
+          }
         }
       }
       img {
         width: 100%;
-        height: 420px;
         object-fit: cover;
-         position: relative;
+        position: relative;
         z-index: 55;
+        height: 220px;
+          @media (min-width: 600px){
+            height: 420px;
+          }
       }
     }
     .col-4 {
-      width: 25%;
+      width: 100%;
+      @media (min-width: 992px){
+        width: 25%;
+      }
       img {
         width: 100%;
       }
@@ -174,12 +196,22 @@
         padding-left: 20px;
         max-height: 420px;
         overflow: auto;
+        @media screen and (max-width: 991px){
+          max-width: 100%;
+          overflow-x: auto;
+        }
         ul {
           list-style: none;
           margin: 0; 
           padding: 0;
+          @media screen and (max-width: 991px){
+            display: flex;
+          }
           li {
             margin-bottom: 20px;
+            @media screen and (max-width: 991px){
+              flex: 0 0 33%;
+            }
           }
         }
       }
@@ -214,8 +246,7 @@
 
 /* Reponsive */
 @media (min-width: 576px){
-  .modal-content {
-      max-width: 500px;
+  .modal-media__content {
       margin: 1.75rem auto;
   }
   .modal-dialog-centered {
@@ -223,13 +254,13 @@
   }
 }
 @media (min-width: 992px){
-  .modal-content {
-      max-width: 800px;
+  .modal-media__content {
+      max-width: 1000px;
   }
 }
 @media (min-width: 1300px){
-  .modal-content {
-      max-width: 1000px;
+  .modal-media__content {
+      max-width: 1250px;
   }
 }
 
@@ -248,8 +279,8 @@
     }
     .button-media {
       display: inline-block;
-      width: 70px;
-      height: 70px;
+      width: 40px;
+      height: 40px;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -265,6 +296,10 @@
           color: #fff;
         }
       }
+      @media (min-width: 992px){
+        width: 70px;
+        height: 70px;
+      }
       i {
         color: #ff0000;
         font-size: 25px;
@@ -273,8 +308,22 @@
         left: 50%;
         transform: translate3d(-50%, -50%, 0);
         transition: all 0.5s ease-in-out;
-    
+        @media (min-width: 992px){
+          font-size: 18px;
+        }
       }
+    }
+  }
+}
+
+.media_title {
+  @media (max-width: 991px){
+    margin-bottom: 20px!important;
+    text-align: center;
+    &:before {
+      left: 50%;
+      right: auto;
+      transform: translateX(-50%);
     }
   }
 }
