--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -173,7 +173,31 @@ body {
   width: 197px;
   max-width: 197px; }
   .nav__logo a {
-    display: block; }
+    display: block;
+    position: relative;
+    width: 197px;
+    height: 80px;
+    overflow: hidden; }
+    .nav__logo a .logo__figure {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      transition: all 0.25s ease-in-out; }
+    .nav__logo a:hover .logo__figure-hover.logo__figure {
+      left: 0px;
+      -webkit-transform: none;
+              transform: none; }
+    .nav__logo a:hover .logo__figure {
+      -webkit-transform: translateX(-100%);
+              transform: translateX(-100%); }
+    .nav__logo a .logo__figure-hover {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 100%;
+      -webkit-transform: none;
+              transform: none;
+      transition: all 0.25s ease-in-out; }
 
 .col-60 {
   width: 60%; }
