--- a/www/assets/scss/_app.scss
+++ b/www/assets/scss/_app.scss
@@ -206,6 +206,32 @@ body {
   max-width: 197px;
   a {
     display: block;
+    position: relative;
+    width: 197px;
+    height: 80px;
+    overflow: hidden;
+    .logo__figure {
+      transform: translateX(0);
+      transition: all 0.25s ease-in-out;
+    }
+    &:hover {
+      .logo__figure-hover.logo__figure {
+        left: 0px;
+        transform: none;
+      }
+      .logo__figure {
+        transform: translateX(-100%);
+      }
+    }
+    .logo__figure-hover {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 100%;
+      transform: none;
+      transition: all 0.25s ease-in-out;
+    }
   }
 }
 
