--- a/www/assets/scss/_block-address.scss
+++ b/www/assets/scss/_block-address.scss
@@ -14,6 +14,7 @@
 .block-address__row {
   display: flex;
   flex-wrap: wrap;
+  align-items: stretch;
   @media screen and (min-width:768px) {
     flex-wrap: nowrap;
   }
@@ -21,15 +22,15 @@
 
 .block-address__col {
   @media screen and (min-width: 768px) {
-    padding: 0 20px;
-  }
-  @media screen and (min-width: 1280px) {
-    padding: 0 40px;
+    padding: 0;
   }
   &.col-left {
     width: 100%;
     @media screen and (min-width: 768px) {
       width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     @media screen and (min-width: 1024px) {
       width: 40%;
@@ -48,13 +49,13 @@
 
 .block-address__detail {
   margin-bottom: 10px;
-  @media screen and (min-width: 768px) {
-    margin-bottom: 20px;
+  &:last-child {
+    margin-bottom: 0;
   }
+}
+
+.block-address__description {
   @media screen and (min-width: 1024px) {
-    margin-bottom: 30px;
-  }
-  @media screen and (min-width: 1280px) {
-    margin-bottom: 40px;
+    max-width: 695px;
   }
 }
