--- a/www/assets/scss/_card-client.scss
+++ b/www/assets/scss/_card-client.scss
@@ -172,6 +172,7 @@
       height: 100%;
       object-fit: cover;
       filter: grayscale(100%);
+      transition: all 0.5s ease-in-out;
     }
   }
   .card__col {
