--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -2045,11 +2045,15 @@ nav.nav {
   z-index: 999; }
 
 /* Modal Content */
+.modal-center {
+  width: 100%;
+  height: 100%; }
+
 .modal-media__content {
   background-color: #000;
   margin: auto;
   padding: 50px;
-  width: 80%;
+  width: 85%;
   color: #fff;
   position: absolute;
   top: 50%;
@@ -2080,7 +2084,7 @@ nav.nav {
         top: -14px; }
   .modal-media__content h2 {
     position: relative;
-    margin: 20px 0; }
+    margin: 30px 0; }
   .modal-media__content .modal-body {
     position: relative; }
   .modal-media__content .modal-nav {
@@ -2122,20 +2126,20 @@ nav.nav {
         height: 100%; }
         .modal-media__content .library .col-8 .library-box #video-id {
           width: 100%;
-          height: 220px; }
+          height: 300px; }
           @media (min-width: 600px) {
             .modal-media__content .library .col-8 .library-box #video-id {
-              height: 420px; } }
+              height: 600px; } }
       .modal-media__content .library .col-8 img {
         width: 100%;
         -o-object-fit: cover;
            object-fit: cover;
         position: relative;
         z-index: 55;
-        height: 220px; }
+        height: 300px; }
         @media (min-width: 600px) {
           .modal-media__content .library .col-8 img {
-            height: 420px; } }
+            height: 600px; } }
     .modal-media__content .library .col-4 {
       width: 100%; }
       @media (min-width: 992px) {
@@ -2145,12 +2149,15 @@ nav.nav {
         width: 100%; }
       .modal-media__content .library .col-4 .library-list {
         padding-left: 20px;
-        max-height: 420px;
+        max-height: 300px;
         overflow: auto; }
         @media screen and (max-width: 991px) {
           .modal-media__content .library .col-4 .library-list {
             max-width: 100%;
             overflow-x: auto; } }
+        @media (min-width: 600px) {
+          .modal-media__content .library .col-4 .library-list {
+            max-height: 600px; } }
         .modal-media__content .library .col-4 .library-list ul {
           list-style: none;
           margin: 0;
@@ -2188,12 +2195,6 @@ nav.nav {
   cursor: pointer; }
 
 /* Reponsive */
-@media (min-width: 576px) {
-  .modal-media__content {
-    margin: 1.75rem auto; }
-  .modal-dialog-centered {
-    min-height: calc(100% - (1.75rem * 2)); } }
-
 @media (min-width: 992px) {
   .modal-media__content {
     max-width: 1000px; } }
@@ -2215,8 +2216,8 @@ nav.nav {
     background: rgba(0, 0, 0, 0.6); }
   #video li .button-media {
     display: inline-block;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -2231,22 +2232,29 @@ nav.nav {
       border-color: #fff; }
       #video li .button-media:hover i {
         color: #fff; }
+    @media (min-width: 600px) {
+      #video li .button-media {
+        width: 40px;
+        height: 40px; } }
     @media (min-width: 992px) {
       #video li .button-media {
-        width: 70px;
-        height: 70px; } }
+        width: 60px;
+        height: 60px; } }
     #video li .button-media i {
       color: #ff0000;
-      font-size: 25px;
+      font-size: 18px;
       position: absolute;
       top: 50%;
       left: 50%;
       -webkit-transform: translate3d(-50%, -50%, 0);
               transform: translate3d(-50%, -50%, 0);
       transition: all 0.5s ease-in-out; }
+      @media (min-width: 600px) {
+        #video li .button-media i {
+          font-size: 20px; } }
       @media (min-width: 992px) {
         #video li .button-media i {
-          font-size: 18px; } }
+          font-size: 22px; } }
 
 @media (max-width: 991px) {
   .media_title {
