--- a/www/assets/scss/_gallery.scss
+++ b/www/assets/scss/_gallery.scss
@@ -81,11 +81,15 @@
 }
 
 /* Modal Content */
+.modal-center {
+  width: 100%;
+  height: 100%;
+}
 .modal-media__content {
   background-color: #000;
   margin: auto;
   padding: 50px;
-  width: 80%;
+  width: 85%;
   color: #fff;
   position: absolute;
   top: 50%;
@@ -167,9 +171,9 @@
         height: 100%;
         #video-id {
           width: 100%;
-          height: 220px;
+          height: 300px;
           @media (min-width: 600px){
-            height: 420px;
+            height: 600px;
           }
         }
       }
@@ -178,9 +182,9 @@
         object-fit: cover;
         position: relative;
         z-index: 55;
-        height: 220px;
+        height: 300px;
           @media (min-width: 600px){
-            height: 420px;
+            height: 600px;
           }
       }
     }
@@ -194,11 +198,14 @@
       }
       .library-list {
         padding-left: 20px;
-        max-height: 420px;
+        max-height: 300px;
         overflow: auto;
         @media screen and (max-width: 991px){
           max-width: 100%;
           overflow-x: auto;
+        }
+        @media (min-width: 600px){
+          max-height: 600px;
         }
         ul {
           list-style: none;
@@ -245,14 +252,6 @@
 }
 
 /* Reponsive */
-@media (min-width: 576px){
-  .modal-media__content {
-      margin: 1.75rem auto;
-  }
-  .modal-dialog-centered {
-    min-height: calc(100% - (1.75rem * 2));
-  }
-}
 @media (min-width: 992px){
   .modal-media__content {
       max-width: 1000px;
@@ -279,8 +278,8 @@
     }
     .button-media {
       display: inline-block;
-      width: 40px;
-      height: 40px;
+      width: 30px;
+      height: 30px;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -296,20 +295,27 @@
           color: #fff;
         }
       }
+      @media (min-width: 600px){
+        width: 40px;
+        height: 40px;
+      }
       @media (min-width: 992px){
-        width: 70px;
-        height: 70px;
+        width: 60px;
+        height: 60px;
       }
       i {
         color: #ff0000;
-        font-size: 25px;
+        font-size: 18px;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate3d(-50%, -50%, 0);
         transition: all 0.5s ease-in-out;
+        @media (min-width: 600px){
+          font-size: 20px;
+        }
         @media (min-width: 992px){
-          font-size: 18px;
+          font-size: 22px;
         }
       }
     }
