--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -438,7 +438,9 @@ body.header__menu-active {
   align-items: center;
   justify-content: center; }
   .videopopupjs .videopopupjs__content {
-    margin-top: 10px; }
+    margin-top: 10px;
+    max-height: 600px !important;
+    height: 100% !important; }
   .videopopupjs .videopopupjs__close {
     width: 100% !important;
     text-align: right; }
@@ -462,6 +464,17 @@ a[href^="tel"] {
   text-decoration: none;
   /* Remove underline. */
   /* Additional css `propery: value;` pairs here */ }
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0; }
+  .videoWrapper iframe, .videoWrapper img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
 
 .hero__container {
   position: relative; }
@@ -2121,25 +2134,13 @@ nav.nav {
       @media (min-width: 992px) {
         .modal-media__content .library .col-8 {
           width: 75%; } }
-      .modal-media__content .library .col-8 .library-box {
-        width: 100%;
-        height: 100%; }
-        .modal-media__content .library .col-8 .library-box #video-id {
-          width: 100%;
-          height: 300px; }
-          @media (min-width: 600px) {
-            .modal-media__content .library .col-8 .library-box #video-id {
-              height: 600px; } }
+      .modal-media__content .library .col-8 .library-box #video-id {
+        width: 100%; }
       .modal-media__content .library .col-8 img {
         width: 100%;
         -o-object-fit: cover;
            object-fit: cover;
-        position: relative;
-        z-index: 55;
-        height: 300px; }
-        @media (min-width: 600px) {
-          .modal-media__content .library .col-8 img {
-            height: 600px; } }
+        z-index: 55; }
     .modal-media__content .library .col-4 {
       width: 100%; }
       @media (min-width: 992px) {
@@ -2149,7 +2150,6 @@ nav.nav {
         width: 100%; }
       .modal-media__content .library .col-4 .library-list {
         padding-left: 20px;
-        max-height: 300px;
         overflow: auto; }
         @media screen and (max-width: 991px) {
           .modal-media__content .library .col-4 .library-list {
@@ -2157,7 +2157,10 @@ nav.nav {
             overflow-x: auto; } }
         @media (min-width: 600px) {
           .modal-media__content .library .col-4 .library-list {
-            max-height: 600px; } }
+            max-height: 400px; } }
+        @media (min-width: 1280px) {
+          .modal-media__content .library .col-4 .library-list {
+            max-height: 500px; } }
         .modal-media__content .library .col-4 .library-list ul {
           list-style: none;
           margin: 0;
@@ -2199,7 +2202,7 @@ nav.nav {
   .modal-media__content {
     max-width: 1000px; } }
 
-@media (min-width: 1300px) {
+@media (min-width: 1220px) {
   .modal-media__content {
     max-width: 1250px; } }
 
@@ -2265,6 +2268,17 @@ nav.nav {
       right: auto;
       -webkit-transform: translateX(-50%);
               transform: translateX(-50%); } }
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0; }
+  .videoWrapper iframe, .videoWrapper img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
 
 .header {
   width: 100%;
