--- a/www/assets/scss/_gallery.scss
+++ b/www/assets/scss/_gallery.scss
@@ -167,25 +167,25 @@
         width: 75%;
       }
       .library-box {
-        width: 100%;
-        height: 100%;
+        // width: 100%;
+        // height: 100%;
         #video-id {
           width: 100%;
-          height: 300px;
+          // height: 220px;
           @media (min-width: 600px){
-            height: 600px;
+            // height: 600px;
           }
         }
       }
       img {
         width: 100%;
         object-fit: cover;
-        position: relative;
+        // position: relative;
         z-index: 55;
-        height: 300px;
-          @media (min-width: 600px){
-            height: 600px;
-          }
+        // height: 220px;
+        @media (min-width: 600px){
+          // height: 400px;
+        }
       }
     }
     .col-4 {
@@ -198,14 +198,17 @@
       }
       .library-list {
         padding-left: 20px;
-        max-height: 300px;
+        // max-height: 220px;
         overflow: auto;
         @media screen and (max-width: 991px){
           max-width: 100%;
           overflow-x: auto;
         }
         @media (min-width: 600px){
-          max-height: 600px;
+          max-height: 400px;
+        }
+        @media (min-width: 1280px){
+          max-height: 500px;
         }
         ul {
           list-style: none;
@@ -257,7 +260,7 @@
       max-width: 1000px;
   }
 }
-@media (min-width: 1300px){
+@media (min-width: 1220px){
   .modal-media__content {
       max-width: 1250px;
   }
@@ -332,4 +335,17 @@
       transform: translateX(-50%);
     }
   }
+}
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    iframe, img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
 }
