--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -2075,7 +2075,8 @@ nav.nav {
           transform: translate3d(-50%, -50%, 0); }
   @media screen and (max-width: 991px) {
     .modal-media__content {
-      padding: 25px; } }
+      padding: 25px;
+      width: 75%; } }
   .modal-media__content .modal-header {
     display: flex;
     align-items: center;
@@ -2268,17 +2269,6 @@ nav.nav {
       right: auto;
       -webkit-transform: translateX(-50%);
               transform: translateX(-50%); } }
-
-.videoWrapper {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0; }
-  .videoWrapper iframe, .videoWrapper img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%; }
 
 .header {
   width: 100%;
