--- a/www/assets/scss/_gallery.scss
+++ b/www/assets/scss/_gallery.scss
@@ -209,6 +209,9 @@
           max-height: 400px;
         }
         @media (min-width: 1280px){
+          max-height: 420px;
+        }
+        @media (min-width: 1440px){
           max-height: 500px;
         }
         ul {
