--- a/www/assets/scss/_gallery.scss
+++ b/www/assets/scss/_gallery.scss
@@ -88,8 +88,8 @@
 .modal-media__content {
   background-color: #000;
   margin: auto;
-  padding: 50px;
-  width: 85%;
+  padding: 20px 50px;
+  width: 70%;
   color: #fff;
   position: absolute;
   top: 50%;
@@ -123,7 +123,7 @@
   }
   h2 {
     position: relative;
-    margin: 30px 0;
+    margin: 20px 0;
   }
   .modal-body {
     position: relative;
@@ -206,13 +206,13 @@
           overflow-x: auto;
         }
         @media (min-width: 600px){
-          max-height: 400px;
+          max-height: 380px;
         }
         @media (min-width: 1280px){
-          max-height: 420px;
+          max-height: 400px;
         }
         @media (min-width: 1440px){
-          max-height: 500px;
+          max-height: 420px;
         }
         ul {
           list-style: none;
@@ -244,7 +244,7 @@
   font-size: 40px!important;
   font-weight: bold;
   position: absolute;
-  right: 10px;
+  right: 0px;
   top: 10px;
   width: 47px;
   text-align: center;
