--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -439,28 +439,46 @@ body.header__menu-active {
   justify-content: center; }
   .videopopupjs .videopopupjs__content {
     max-height: 300px;
-    height: 100% !important; }
-    @media screen and (min-width: 768px) {
+    height: 100% !important;
+    margin-top: 0 !important; }
+    @media screen and (max-height: 500px) {
       .videopopupjs .videopopupjs__content {
-        max-height: 500px; } }
+        max-height: 300px;
+        overflow-y: auto; } }
     @media screen and (min-width: 1024px) {
       .videopopupjs .videopopupjs__content {
-        max-height: calc(100vh - 100px);
+        max-height: -webkit-max-content;
+        max-height: -moz-max-content;
+        max-height: max-content;
         position: relative;
-        max-width: calc(90vw - 50px) !important; } }
+        max-width: calc(90vw - 300px) !important; } }
   .videopopupjs .videopopupjs__close {
-    width: 100% !important;
-    text-align: right; }
+    width: 100%;
+    text-align: right;
+    height: 10px; }
+    @media screen and (max-height: 500px) {
+      .videopopupjs .videopopupjs__close {
+        margin-top: 10px; } }
+    @media screen and (min-width: 1024px) {
+      .videopopupjs .videopopupjs__close {
+        height: 20px; } }
     .videopopupjs .videopopupjs__close:after {
       content: none !important; }
     .videopopupjs .videopopupjs__close .video__bars {
-      width: 30px;
+      width: 20px;
       height: 3px;
       display: inline-block;
       background: #fff; }
+      @media screen and (min-width: 1024px) {
+        .videopopupjs .videopopupjs__close .video__bars {
+          width: 30px; } }
       .videopopupjs .videopopupjs__close .video__bars:first-child {
-        -webkit-transform: translateX(30.5px) rotate(-45deg);
-                transform: translateX(30.5px) rotate(-45deg); }
+        -webkit-transform: translateX(20px) rotate(-45deg);
+                transform: translateX(20px) rotate(-45deg); }
+        @media screen and (min-width: 1024px) {
+          .videopopupjs .videopopupjs__close .video__bars:first-child {
+            -webkit-transform: translateX(30.5px) rotate(-45deg);
+                    transform: translateX(30.5px) rotate(-45deg); } }
       .videopopupjs .videopopupjs__close .video__bars:last-child {
         -webkit-transform: translateX(0.55px) rotate(45deg);
                 transform: translateX(0.55px) rotate(45deg); }
@@ -498,6 +516,9 @@ a[href^="tel"] {
     .hero__figure {
       min-height: 100%;
       height: 100vh; } }
+  @media screen and (max-height: 500px) {
+    .hero__figure {
+      min-height: 145vh !important; } }
   .hero__figure:before {
     max-width: 100%;
     padding-top: 56.25%; }
@@ -761,7 +782,7 @@ a[href^="tel"] {
 
 @media screen and (min-width: 1280px) {
   .hero--sub-title .hero__inner {
-    top: 30%; } }
+    top: 50%; } }
 
 .hero--sub-title .hero__figure {
   -webkit-filter: grayscale(0%);
@@ -2079,7 +2100,9 @@ nav.nav {
   top: 50%;
   left: 50%;
   -webkit-transform: translate3d(-50%, -50%, 0);
-          transform: translate3d(-50%, -50%, 0); }
+          transform: translate3d(-50%, -50%, 0);
+  max-height: calc(100vh - 20px);
+  overflow-y: auto; }
   @media screen and (max-width: 991px) {
     .modal-media__content {
       padding: 25px;
@@ -2356,7 +2379,9 @@ nav.nav {
 
 .header__list {
   width: 100%;
-  padding: 0 40px; }
+  padding: 0 40px;
+  overflow-y: auto;
+  max-height: calc(100vh - 100px); }
   @media screen and (min-width: 768px) {
     .header__list {
       width: 50%; } }
