--- a/www/assets/scss/_header.scss
+++ b/www/assets/scss/_header.scss
@@ -87,6 +87,8 @@
 .header__list {
   width: 100%;
   padding: 0 40px;
+  overflow-y: auto;
+  max-height: calc(100vh - 100px);
   @media screen and (min-width: 768px) {
     width: 50%;
   }
