--- a/www/assets/scss/_hero.scss
+++ b/www/assets/scss/_hero.scss
@@ -12,6 +12,9 @@
     min-height: 100%;
     height: 100vh;
   }
+  @media screen and (max-height: 500px) {
+    min-height: 145vh!important;
+  }
   &:before {
     max-width: 100%;
     padding-top: percentage(1080/1920);
@@ -316,7 +319,7 @@
 .hero--sub-title {
   .hero__inner {
     @media screen and (min-width: 1280px) {
-      top: 30%;
+      top: 50%;
     }
   }
   .hero__figure {
